--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -259,6 +259,15 @@ a:hover {
   color: #3291ff;
 }
 
+hr.article {
+  border-width: 0 0 8px;
+  border-style: solid;
+  border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1"><circle fill="hsla(0, 0%, 65%, 1.0)" cx="1" cy="0.5" r="0.5"/></svg>')
+    0 0 100% repeat;
+  width: 216px;
+  margin-bottom: 2em;
+}
+
 .links {
   margin-top: var(--gap);
 }
