--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -133,7 +133,8 @@
 .postPreview :global(.posted) {
   margin-top: 0.4em;
   margin-bottom: 0.5em;
-  font-size: 0.85em;
+  font-size: 0.8em;
+  color: #777777;
 }
 
 .post {
