--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -63,7 +63,7 @@
 }
 
 .postPreview {
-  max-width: 600px;
+  max-width: 600vw;
   margin: 10px auto;
   border-bottom: 1px solid rgba(0, 0, 0, 0.8);
 }
@@ -138,7 +138,7 @@
 }
 
 .post {
-  max-width: calc(600px + 10%);
+  max-width: calc(60vw);
   margin: 0 auto;
   padding: 5%;
 }
