--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -221,7 +221,7 @@ pre.dark[class*='language-'] {
   white-space: nowrap;
 }
 
-@media (max-width: 60vw) {
+@media (max-width: 600px) {
   .feature div {
     flex-basis: auto;
     padding-left: 0;
@@ -375,7 +375,7 @@ pre :global(code) {
   transform: skew(-20deg);
 }
 
-@media (max-width: 60vw) {
+@media (max-width: 600px) {
   .explanation {
     padding: 0 1rem 4rem;
   }
@@ -383,6 +383,24 @@ pre :global(code) {
   h2 {
     font-size: 0.95rem;
     letter-spacing: 0;
+  }
+
+  .youtube-1079px {
+    margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+    max-width: 90vw;
+    max-height: 50vw;
+    padding: 1px;
+    text-align: center;
+  }
+
+  .youtube-1440px {
+    margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+    max-width: 90vw;
+    max-height: 67vw;
+    padding: 1px;
+    text-align: center;
   }
 }
 
