--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -386,6 +386,15 @@ b {
   border-radius: 2px;
 }
 
+iframe[class*='bookmark'] {
+  max-width: 60vw;
+  border: 0px;
+  border-radius: 2px;
+  padding: 0px;
+  text-align: center;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+}
+
 @media (max-width: 600px) {
   .explanation {
     padding: 0 1rem 4rem;
@@ -398,6 +407,14 @@ b {
 
   iframe[id*='twitter-widget'] {
     margin-left: 0vw;
+  }
+
+  iframe[class*='bookmark'] {
+    max-width: 85vw;
+    border: 0px;
+    text-align: center;
+    margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
   }
 
   .youtube-1079px {
