update youtube max width

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -310,7 +310,7 @@ h3 {
   border: 0px;
 }
 
-.youtube-2158px {
+.youtube-56 {
   margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
   max-width: 60vw;
@@ -319,7 +319,7 @@ h3 {
   text-align: center;
 }
 
-.youtube-2880px {
+.youtube-75 {
   margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
   max-width: 60vw;
@@ -417,7 +417,7 @@ iframe[class*='bookmark'] {
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
   }
 
-  .youtube-2158px {
+  .youtube-56 {
     margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
     max-width: 85vw;
@@ -427,7 +427,7 @@ iframe[class*='bookmark'] {
     text-align: center;
   }
 
-  .youtube-2880px {
+  .youtube-75 {
     margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
     max-width: 85vw;
