--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -112,10 +112,13 @@
 }
 
 .post :global(.callout) {
-  padding: 16px 16px 16px 12px;
+  margin: auto;
+  padding: 16px 14px 16px 14px;
   display: flex;
   width: 100%;
-  border-radius: 3px;
+  position: relative;
+  text-align: center;
+  border-radius: 6px;
   border-width: 1px;
   border-style: solid;
   border-color: transparent;
