--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -243,8 +243,15 @@ a {
   color: #0070f3;
   text-decoration: none;
 }
+
 a:hover {
   color: #3291ff;
+}
+
+a[target='_blank']:after {
+  content: '⏎';
+  font-family: var(--font-sans);
+  margin: 0px 3px;
 }
 
 hr.article {
